--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>An Adalto Picotti Site<</title>
+        <title>Adalto Picotti | Solutions</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.7/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">An Adalto Picotti Site</a></h1>
+            <h1><a href="/">Adalto Picotti | Solutions</a></h1>
         </div>
         <div class="content container">
             <div class="row">
