--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -18,7 +18,8 @@
       </div>
       <button type="submit" class="save btn btn-default">Guardar</button>
   </form>
-  <p>Custo total: {{total_cost}}</p>
-  <p>Subvenção Federal: {{subv_fed}}</p>
-  <p>Custo Final: {{final_cost}}</p>
+  <p>IS total: R$ {{is_total}}</p>
+  <p>Custo total: R$ {{total_cost}}</p>
+  <p>Subvenção Federal: R$ {{subv_fed}}</p>
+  <p>Custo Final: R$ {{final_cost}}</p>
 {% endblock %}
