--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.7/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+
     </head>
     <body>
         <div class="page-header">
