--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -13,11 +13,10 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="lbl_municipio">Município</label>
-            <select class="form-control">
+            <select name="city" class="form-control">
               {% for city in cities %}
-              <option>{{city.city_name}}</option>
+              <option value="{{city.id}}">{{city.name}}</option>
               {% endfor %}
-
             </select>
           </div>
         </div>
@@ -28,7 +27,7 @@
             <label for="lbl_price">Preço da Saca</label>
             <div class="input-group">
               <span class="input-group-addon">R$</span>
-              <input name="price" type="text" class="form-control" aria-label="Amount">
+              <input name="price" type="text" class="form-control" aria-label="Amount" value="30">
               <span class="input-group-addon">,00</span>
             </div>
           </div>
@@ -36,7 +35,7 @@
             <label for="lbl_area">Área</label>
             <div class="input-group">
               <span class="input-group-addon" id="basic-addon1">HA</span>
-              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1">
+              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" value="10">
             </div>
           </div>
           <button type="submit" class="btn btn-default">Calcular</button>
@@ -46,6 +45,10 @@
   </div>
   {% if is_total %}
   <table>
+    <tr>
+      <td>Municipio:</td>
+      <td> {{city}}</td>
+    </tr>
     <tr>
       <td>IS total:</td>
       <td>R$ {{is_total}}</td>
