--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -50,6 +50,10 @@
       <td> {{city}}</td>
     </tr>
     <tr>
+      <td>Prod. Esperada:</td>
+      <td> {{prod_esp}}</td>
+    </tr>
+    <tr>
       <td>IS total:</td>
       <td>R$ {{is_total}}</td>
     </tr>
