--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -44,8 +44,11 @@
     </form>
   </div>
   {% if is_total %}
-  <div class="panel panel-primary">
-   <div class="panel-heading">Panel heading without title</div>
+  <div class="panel panel-default">
+    <div class="panel-heading">Panel heading without title</div>
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel title</h3>
+      </div>
      <div class="panel-body">
       <table>
         <tr>
