--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -44,7 +44,7 @@
     </form>
   </div>
   {% if is_total %}
-  <div class="panel panel-default">
+  <div class="panel panel-primary col-md-4">
     <div class="panel-heading">
       <h3 class="panel-title">Panel title</h3>
     </div>
