--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -50,7 +50,7 @@
         <h3 class="panel-title">Panel title</h3>
       </div>
       <div class="panel-body">
-        <table>
+        <table class="table">
           <tr>
             <td>Municipio:</td>
             <td> {{city}}</td>
