--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -57,7 +57,11 @@
           </tr>
           <tr>
             <td>Prod. Esperada:</td>
-            <td> {{prod_esp}}</td>
+            <td> {{prod_esp}} Kg/ha</td>
+          </tr>
+           <tr>
+            <td>Prod. Segurada:</td>
+            <td> {{prod_seg}} Kg/ha</td>
           </tr>
           <tr>
             <td>IS total:</td>
