--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -8,7 +8,7 @@
   <h1>Calculo</h1>
   <div class="container">
     <div class="row">
-      <div class="col-md-5 col-md-pull-1">
+      <div class="col-md-pull-1">
     <form method="POST" name="cotador" class="post-form">{% csrf_token %}
       <p> Abatía - 24,33 SC/ha - Tax 16,5%</p>
        <div class="row">
@@ -46,7 +46,7 @@
     </form>
       </div>
     {% if is_total %}
-    <div class="col-md-4 col-md-push-5">
+    <div class="col-md-4 col-md-push-2">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">Cotação</h3>
