--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -12,7 +12,7 @@
     <form method="POST" name="cotador" class="post-form">{% csrf_token %}
       <p> Abatía - 24,33 SC/ha - Tax 16,5%</p>
        <div class="row">
-        <div class="col-md-4">
+        <div>
           <div class="form-group">
             <label for="lbl_municipio">Município</label>
             <select name="city" class="form-control">
