--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -52,7 +52,7 @@
           <h3 class="panel-title">Cotação</h3>
         </div>
         <div class="panel-body">
-          <table class="table">
+          <table class="table table-bordered">
             <tr>
               <td>Municipio:</td>
               <td> {{city}}</td>
