--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -8,11 +8,11 @@
   <h1>Calculo</h1>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-md-pull-1">
+      <div class="col-xs-4 col-xs-pull-1">
     <form method="POST" name="cotador" class="post-form">{% csrf_token %}
       <p> Abatía - 24,33 SC/ha - Tax 16,5%</p>
        <div class="row">
-        <div class="col-md-10">
+        <div class="col-xs-10">
           <div class="form-group">
             <label for="lbl_municipio">Município</label>
             <select name="city" class="form-control">
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-xs-6">
           <div class="form-group">
             <label for="lbl_price">Preço da Saca</label>
             <div class="input-group">
