--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -18,7 +18,7 @@
             <label for="lbl_product">Produto:</label>
             <select name="product" class="form-control">
               {% for product in products %}
-              <option value="{{city.id}}">{{product.name}}</option>
+              <option value="{{city.id}}" {{re_select}}>{{product.name}}</option>
               {% endfor %}
             </select>
           </div>
@@ -36,7 +36,7 @@
             <label for="lbl_municipio">Município</label>
             <select name="city" class="form-control">
               {% for city in cities %}
-              <option value="{{city.id}}">{{city.name}}</option>
+              <option value="{{city.id}}" {{re_select}}>{{city.name}}</option>
               {% endfor %}
             </select>
           </div>
@@ -48,7 +48,7 @@
             <label for="lbl_price">Preço da Saca</label>
             <div class="input-group">
               <span class="input-group-addon">R$</span>
-              <input name="price" type="text" class="form-control" aria-label="Amount" value="30">
+              <input name="price" type="text" class="form-control" aria-label="Amount" {% if price %} {{price}} {% else %} value="35" {% endif %}>
               <span class="input-group-addon">,00</span>
             </div>
           </div>
@@ -56,7 +56,7 @@
             <label for="lbl_area">Área</label>
             <div class="input-group">
               <span class="input-group-addon" id="basic-addon1">HA</span>
-              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" value="10">
+              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" {% if area %} {{area}} {% else %} value="10" {% endif %}>
             </div>
           </div>
           <button type="submit" class="btn btn-default">Calcular</button>
