--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -48,7 +48,7 @@
             <label for="lbl_price">Preço da Saca</label>
             <div class="input-group">
               <span class="input-group-addon">R$</span>
-              <input name="price" type="text" class="form-control" aria-label="Amount" {% if price %} {{price}} {% else %} value="35" {% endif %}>
+              <input name="price" type="text" class="form-control" aria-label="Amount" {% if price %} value="{{price}}" {% else %} value="35" {% endif %}>
               <span class="input-group-addon">,00</span>
             </div>
           </div>
@@ -56,7 +56,7 @@
             <label for="lbl_area">Área</label>
             <div class="input-group">
               <span class="input-group-addon" id="basic-addon1">HA</span>
-              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" {% if area %} {{area}} {% else %} value="10" {% endif %}>
+              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" {% if area %} value="{{area}}" {% else %} value="10" {% endif %}>
             </div>
           </div>
           <button type="submit" class="btn btn-default">Calcular</button>
