--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -18,7 +18,7 @@
             <label for="lbl_product">Produto:</label>
             <select name="product" class="form-control">
               {% for product in products %}
-              {% if re_select = {{city.id}} %}
+              {% if re_select == {{city.id}} %}
               <option value="{{city.id}}" selected>{{product.name}}</option>
               {% if else %}
               <option value="{{city.id}}">{{product.name}}</option>
