--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -36,8 +36,8 @@
             <label for="lbl_municipio">Município</label>
             <select name="city" class="form-control">
               {% for city in cities %}
-              {% if re_select == {{city.id}} %}
-                <option value="{{city.id}}" selected>{{product.name}}</option>
+              {% if {{city.id}} == re_select %}
+                <option value="{{city.id}}" selected>{{city.name}}</option>
               {% else %}
               <option value="{{city.id}}">{{city.name}}</option>
               {% endif %}
