--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">ADAPITECH | Solutions</a></h1>
+            <h1><a href="/">| ADAPITECH |</a></h1>
         </div>
         <div class="content container">
             <div class="row">
