--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -10,7 +10,6 @@
     <div class="row">
       <div class="col-md-4 col-md-pull-1">
     <form method="POST" name="cotador" class="post-form">{% csrf_token %}
-      <p> Abatía - 24,33 SC/ha - Tax 16,5%</p>
        <div class="row">
         <div class="col-md-10">
           <!-- PRODUTO -->
@@ -18,16 +17,16 @@
             <label for="lbl_product">Produto:</label>
             <select name="product" class="form-control">
               {% for product in products %}
-              <option value="{{city.id}}">{{product.name}}</option>
+              <option value="{{product.id}}">{{product.name}}</option>
               {% endfor %}
             </select>
           </div>
           <!-- CULTURA
           <div class="form-group">
             <label for="lbl_culture">Cultura:</label>
-            <select name="product" class="form-control">
+            <select name="culture" class="form-control">
               {% for culture in cultures %}
-              <option value="{{city.id}}">{{culture.name}}</option>
+              <option value="{{culture.id}}">{{culture.name}}</option>
               {% endfor %}
             </select>
           </div>-->
