add lvl_cob model, lvl_cob sel on template, calc using lvl_cob, product and taxes)

--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -39,6 +39,15 @@
               {% endfor %}
             </select>
           </div>
+          <!-- PRODUTO -->
+          <div class="form-group">
+            <label for="lbl_nc">Nivel de Cobertura:</label>
+            <select name="nc" class="form-control">
+              {% for nc in nc %}
+              <option value="{{nc.id}}">{{nc.name}}</option>
+              {% endfor %}
+            </select>
+          </div>
         </div>
       </div>
       <div class="row">
