--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -19,6 +19,7 @@
     <form method="POST" name="cotador" class="post-form">{% csrf_token %}
      <div class="row">
         <div class="col-md-10">
+          {{tax}}
           <!-- PRODUTO -->
           <div class="form-group">
             <label for="lbl_product">Produto:</label>
