--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -40,7 +40,15 @@
             <div class="row">
             </div>
         </div>
-
+        <ul>
+          <li><p href="https://arxiv.org/"><i class="icon-chevron-right"></i> arXive</p></li>
+          <li><a href="https://doi.org/"><i class="icon-chevron-right"></i> doi</a></li>
+          <li><a href="http://lattes.cnpq.br/"><i class="icon-chevron-right"></i> Lattes</a></li>
+          <li><a href="#forms"><i class="icon-chevron-right"></i> Forms</a></li>
+          <li><a href="#buttons"><i class="icon-chevron-right"></i> Buttons</a></li>
+          <li><a href="#images"><i class="icon-chevron-right"></i> Images</a></li>
+          <li><a href="#icons"><i class="icon-chevron-right"></i> Icons by Glyphicons</a></li>
+        </ul>
 
 
     </body>
