--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -18,92 +18,100 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-pull-1">
-    <form method="POST" name="cotador" class="post-form">{% csrf_token %}
-     <div class="row">
-        <div class="col-md-10">
+      <form method="POST" name="cotador" class="post-form">{% csrf_token %}
+       <div class="row">
+          <div class="col-md-10">
 
-          <!-- PRODUTO -->
-          <div class="form-group">
-            <label for="lbl_product">Produto: {{product}}</label>
-            <select name="product" class="form-control">
-              {% for product in products %}
-                {% if product.id == product_sel %}
-                  <option value="{{product.id}}" selected>{{product.name}}</option>
-                {% else %}
-                  <option value="{{product.id}}">{{product.name}}</option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
-          <!-- CULTURA -->
-          {% if product_sel %}
-          <div class="form-group">
-            <label for="lbl_culture">Cultura:</label>
-            <select name="culture" class="form-control">
-              {% for culture in cultures %}
-                {% if culture.id == culture_sel %}
-                  <option value="{{culture.id}}" selected>{{culture.name}}</option>
-                {% else %}
-                  <option value="{{culture.id}}">{{culture.name}}</option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
-          {% endif %}
-          <!-- MUNICIPIO -->
-          {% if culture_sel %}
-          <div class="form-group">
-            <label for="lbl_municipio">Município</label>
-            <select name="city" class="form-control">
-              {% for city in cities %}
-                {% if city.id == city_sel %}
-                  <option value="{{city.id}}" selected>{{city.name}}</option>
-                {% else %}
-                  <option value="{{city.id}}">{{city.name}}</option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
-          <!-- Nivel de Cobertura -->
-          <p></p>
-          <div class="form-group">
-            <label for="lbl_nc">Nivel de Cobertura: </label>
-            <select name="niv_cob" class="form-control">
-              {% for nc in ncs %}
-                {% if nc.id == nc_sel %}
-                  <option value="{{nc.id}}" selected>{{nc.name}}</option>
-                {% else %}
-                  <option value="{{nc.id}}">{{nc.name}}</option>
-                {% endif %}
-              {% endfor %}
-            </select>
-          </div>
-          {% endif %}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="lbl_price">Preço da Saca</label>
-            <div class="input-group">
-              <span class="input-group-addon">R$</span>
-              <input name="price" type="text" class="form-control" aria-label="Amount" {% if price %} value="{{price}}" {% else %} value="35" {% endif %}>
-              <span class="input-group-addon">,00</span>
+            <!-- PRODUTO -->
+            <div class="form-group">
+              <label for="lbl_product">Produto: {{product}} - Page: {{index}}</label>
+              <select name="product" class="form-control">
+                {% for product in products %}
+                  {% if product.id == product_sel %}
+                    <option value="{{product.id}}" selected>{{product.name}}</option>
+                  {% else %}
+                    <option value="{{product.id}}">{{product.name}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
             </div>
-          </div>
-          <div class="form-group">
-            <label for="lbl_area">Área</label>
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon1">HA</span>
-              <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" {% if area %} value="{{area}}" {% else %} value="10" {% endif %}>
+            <!-- CULTURA -->
+            {% if index >= 1 %}
+            <div class="form-group">
+              <label for="lbl_culture">Cultura: {{culture}}</label>
+              <select name="culture" class="form-control">
+                {% for culture in cultures %}
+                  {% if culture.id == culture_sel %}
+                    <option value="{{culture.id}}" selected>{{culture.name}}</option>
+                  {% else %}
+                    <option value="{{culture.id}}">{{culture.name}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
             </div>
+            {% endif %}
+            <!-- MUNICIPIO -->
+            {% if index >= 2 %}
+            <div class="form-group">
+              <label for="lbl_municipio">Município</label>
+              <select name="city" class="form-control">
+                {% for city in cities %}
+                  {% if city.id == city_sel %}
+                    <option value="{{city.id}}" selected>{{city.name}}</option>
+                  {% else %}
+                    <option value="{{city.id}}">{{city.name}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            <!-- Nivel de Cobertura -->
+            <p></p>
+            <div class="form-group">
+              <label for="lbl_nc">Nivel de Cobertura: </label>
+              <select name="niv_cob" class="form-control">
+                {% for nc in ncs %}
+                  {% if nc.id == nc_sel %}
+                    <option value="{{nc.id}}" selected>{{nc.name}}</option>
+                  {% else %}
+                    <option value="{{nc.id}}">{{nc.name}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            {% endif %}
           </div>
-          <button type="submit" class="btn btn-default">Proximo</button>
         </div>
-      </div>
-    </form>
-      </div>
-    {% if is_total %}
+        <div class="row">
+          <div class="col-md-6">
+            {% if index >= 3 %}
+            <div class="form-group">
+              <label for="lbl_price">Preço da Saca</label>
+              <div class="input-group">
+                <span class="input-group-addon">R$</span>
+                <input name="price" type="text" class="form-control" aria-label="Amount" {% if price %} value="{{price}}" {% else %} value="35" {% endif %}>
+                <span class="input-group-addon">,00</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="lbl_area">Área</label>
+              <div class="input-group">
+                <span class="input-group-addon" id="basic-addon1">HA</span>
+                <input type="text" name="area" class="form-control" placeholder="10" aria-describedby="basic-addon1" {% if area %} value="{{area}}" {% else %} value="10" {% endif %}>
+              </div>
+            </div>
+            {% endif %}
+            <button type="submit" class="btn btn-default">
+              {% if index == 3 %}
+                Calcular
+              {% else %}
+                Avançar
+              {% endif %}
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    {% if index >= 4 %}
     <div class="col-md-6 col-md-push-1">
       <div class="panel panel-primary">
         <div class="panel-heading">
@@ -134,6 +142,10 @@
             <tr>
               <td>Subvenção Federal: </td>
               <td>R$ {{subv_fed}}</td>
+            </tr>
+            <tr>
+              <td>Subvenção Estadual: </td>
+              <td>R$ {{subv_est}}</td>
             </tr>
             <tr>
               <td>Custo Final: </td>
