cpf and client name

--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/solution.css' %}">
+        <script src="{% static 'js/script.js' %}"></script>
 
     </head>
     <body data-spy="scroll" data-target=".bs-docs-sidebar">
