--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -4,12 +4,15 @@
         <title>ADAPITECH | Solutions</title>
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap-theme.css' %}">
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
+        <script src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/solution.css' %}">
         <script src="{% static 'js/script.js' %}"></script>
 
+
     </head>
     <body data-spy="scroll" data-target=".bs-docs-sidebar">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="page-header">
             <h1><a href="/">| ADAPITECH |</a></h1>
         </div>
