--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -35,7 +35,7 @@
                   {% endif %}
                   {% endfor %}
                 </select>
-              </div>{% if index < 2 %}
+              </div>
               <!-- CLIENTE -->
               <div class="form-group">
                 <label for="lbl_cpf">CPF:</label>
@@ -50,7 +50,7 @@
                   {% endif %}
                 </div>
               </div>
-              {% if index >= 1 and index < 2%}
+              {% if (index >= 1) and (index < 2) %}
               <!-- CLIENTE -->
               <div class="form-group">
                 <label for="lbl_client_name">Nome do Segurado:</label>
