--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -50,7 +50,7 @@
                   {% endif %}
                 </div>
               </div>
-              {% if index >= 1 and index < 2 %}
+              {% if index >= 1  %}
               <!-- CLIENTE -->
               <div class="form-group">
                 <label for="lbl_client_name">Nome do Segurado:</label>
